[gd_scene load_steps=5 format=3 uid="uid://blbsvabbcowbg"]

[ext_resource type="Script" uid="uid://ddvbq5etj2dju" path="res://player/hud.gd" id="1_2mhk3"]
[ext_resource type="Texture2D" uid="uid://pbvseyh32lcr" path="res://material/border.png" id="2_6lbh3"]
[ext_resource type="Theme" uid="uid://coqkt2yn8kbct" path="res://material/theme_underligne.tres" id="3_2tfq1"]

[sub_resource type="Theme" id="Theme_noril"]
default_font_size = 20

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 537.0
offset_bottom = 449.0
script = ExtResource("1_2mhk3")
metadata/_edit_horizontal_guides_ = [0.0]

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -7.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_6lbh3")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
layout_mode = 1
offset_left = 51.0
offset_top = 3.0
offset_right = 475.0
offset_bottom = 53.0
theme = SubResource("Theme_noril")
bbcode_enabled = true
text = "[u]Contrôle et Action possible avec les boutons de la manette"
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
clip_contents = true
layout_mode = 1
offset_left = 13.0
offset_top = 104.0
offset_right = 218.0
offset_bottom = 153.0
text = "Réinitialiser position et
 rotation du dernier objet :"

[node name="Label2" type="Label" parent="."]
clip_contents = true
layout_mode = 1
offset_left = 13.0
offset_top = 275.0
offset_right = 181.0
offset_bottom = 298.0
text = "Modifier annotation : "

[node name="Label3" type="Label" parent="."]
clip_contents = true
layout_mode = 1
offset_left = 12.0
offset_top = 253.0
offset_right = 172.0
offset_bottom = 276.0
text = "Ajouter annotation : "

[node name="Label4" type="Label" parent="."]
clip_contents = true
layout_mode = 1
offset_left = 10.0
offset_top = 192.0
offset_right = 174.0
offset_bottom = 216.0
text = "Boutton pour zoom : "

[node name="Label5" type="Label" parent="."]
layout_mode = 1
offset_left = 11.0
offset_top = 216.0
offset_right = 194.0
offset_bottom = 239.0
text = "Boutton pour dezoom : "

[node name="Label6" type="Label" parent="."]
layout_mode = 1
offset_left = 15.0
offset_top = 347.0
offset_right = 210.0
offset_bottom = 370.0
text = "Séléctionner annotation: "

[node name="Label7" type="Label" parent="."]
layout_mode = 1
offset_left = 224.0
offset_top = 131.0
offset_right = 234.0
offset_bottom = 154.0
text = "1"

[node name="Label8" type="Label" parent="."]
layout_mode = 1
offset_left = 183.0
offset_top = 275.0
offset_right = 258.0
offset_bottom = 298.0
text = "stick click"

[node name="Label9" type="Label" parent="."]
layout_mode = 1
offset_left = 175.0
offset_top = 253.0
offset_right = 249.0
offset_bottom = 276.0
text = "stick click"

[node name="Label10" type="Label" parent="."]
layout_mode = 1
offset_left = 179.0
offset_top = 192.0
offset_right = 189.0
offset_bottom = 215.0
text = "a"

[node name="Label11" type="Label" parent="."]
layout_mode = 1
offset_left = 199.0
offset_top = 214.0
offset_right = 208.0
offset_bottom = 237.0
text = "y"

[node name="Label12" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.033
offset_left = 212.0
offset_top = 347.0
offset_right = 221.0
offset_bottom = 355.183
text = "x"

[node name="Label13" type="Label" parent="."]
layout_mode = 1
offset_left = 12.0
offset_top = 80.0
offset_right = 135.0
offset_bottom = 103.0
text = "Saisir un objet : "

[node name="Label14" type="Label" parent="."]
layout_mode = 1
offset_left = 137.0
offset_top = 80.0
offset_right = 205.0
offset_bottom = 103.0
text = "gâchette"

[node name="Label17" type="Label" parent="."]
layout_mode = 1
offset_left = 12.0
offset_top = 411.0
offset_right = 215.0
offset_bottom = 434.0
text = "Fermer et ouvrir ce menu :"

[node name="Label18" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.036
anchor_bottom = 0.064
offset_left = 223.0
offset_top = 412.0
offset_right = 216.8
offset_bottom = 406.2
text = "b"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
offset_left = 239.0
offset_top = 195.0
offset_right = 522.0
offset_bottom = 237.0
theme = ExtResource("3_2tfq1")
bbcode_enabled = true
text = "[i]Si aucun objet est pointée le zoom s'appliquera à l'ensemble de la sène "

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
layout_mode = 1
offset_left = 266.0
offset_top = 256.0
offset_right = 512.0
offset_bottom = 296.0
theme = ExtResource("3_2tfq1")
bbcode_enabled = true
text = "[i]Ajoute une annotation a l'objet pointé qui en devient donc le parent"
fit_content = true
scroll_active = false

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
layout_mode = 1
offset_left = 244.0
offset_top = 311.0
offset_right = 518.0
offset_bottom = 415.0
theme = ExtResource("3_2tfq1")
bbcode_enabled = true
text = "[i]Affiche l'objet parent en rouge et l'annotation sélectionnée en bleu, cliquer de nouveau en pointant le nouveau propriétaire, ou sur l'annotation pour la deséléctionner"

[node name="RichTextLabel5" type="RichTextLabel" parent="."]
layout_mode = 1
offset_left = 239.0
offset_top = 61.0
offset_right = 528.0
offset_bottom = 181.0
theme = ExtResource("3_2tfq1")
bbcode_enabled = true
text = "[i]Vous pouvez bouger et tourner un objet en le saisissant avec le pointeur et bougant/tournant la manette. vous pouvez aussi utiliser le stick pour faire tourner et éloigner/rapprocher l'objet saisie."
